fix(toolbar): hide overflow of the name header on both axis

--- a/src/styles/toolbar.css
+++ b/src/styles/toolbar.css
@@ -7,7 +7,7 @@
   right: 0;
   height: calc(100vw / 3.4);
   max-height: 300px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .ds-home-link {
